feat(iam-service): update CORS config to support multiple frontend origins