@@ -1,5 +1,9 @@
 package com.example.user.security;
 
+import static org.springframework.security.config.Customizer.withDefaults;
+
+import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -21,11 +25,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
-import static org.springframework.security.config.Customizer.withDefaults;
-
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -39,45 +38,68 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         // Allow specific origins. In a production environment, replace "*" with your actual frontend URL(s).
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://your-production-frontend.com"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        configuration.setAllowedOrigins(
+            List.of(
+                "http://localhost:3000",
+                "https://healthcare-group-2.netlify.app",
+                "https://netlify.khoa.email",
+                "https://healthcare.khoa.email"
+            )
+        );
+        configuration.setAllowedMethods(
+            Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
+        );
+        configuration.setAllowedHeaders(
+            Arrays.asList("Authorization", "Content-Type", "Accept")
+        );
         configuration.setAllowCredentials(true); // Allow sending cookies/authorization headers
         configuration.setMaxAge(3600L); // How long the pre-flight request can be cached
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source =
+            new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration); // Apply this CORS config to all paths
         return source;
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http)
+        throws Exception {
         return http
-                .csrf(csrf -> csrf.disable())
-                // No CORS configuration needed for backend-only
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Use the corsConfigurationSource bean
-                .authorizeHttpRequests(auth -> auth
-//                        .requestMatchers("/auth/**").permitAll()
-//                                .requestMatchers("/auth/register").permitAll()
-//                        .requestMatchers("/public/**").permitAll() // Add any other public endpoints
-                                .requestMatchers( "/auth/register",
-                                        "/auth/login",
-                                        "/auth/verify-otp",
-                                        "/auth/resend-otp",
-                                        "/auth/forgot-password",
-                                        "/auth/verify-reset-otp",
-                                        "/auth/reset-password").permitAll()
-                        .anyRequest().permitAll()
+            .csrf(csrf -> csrf.disable())
+            // No CORS configuration needed for backend-only
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Use the corsConfigurationSource bean
+            .authorizeHttpRequests(auth ->
+                auth
+                    //                        .requestMatchers("/auth/**").permitAll()
+                    //                                .requestMatchers("/auth/register").permitAll()
+                    //                        .requestMatchers("/public/**").permitAll() // Add any other public endpoints
+                    .requestMatchers(
+                        "/auth/register",
+                        "/auth/login",
+                        "/auth/verify-otp",
+                        "/auth/resend-otp",
+                        "/auth/forgot-password",
+                        "/auth/verify-reset-otp",
+                        "/auth/reset-password"
+                    )
+                    .permitAll()
+                    .anyRequest()
+                    .permitAll()
+            )
+            .sessionManagement(session ->
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+            .authenticationProvider(authenticationProvider())
+            .addFilterBefore(
+                jwtFilter,
+                UsernamePasswordAuthenticationFilter.class
+            )
+            .exceptionHandling(ex ->
+                ex.authenticationEntryPoint(
+                    new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)
                 )
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                .authenticationProvider(authenticationProvider())
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-                .exceptionHandling(ex -> ex
-                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-                )
-                .build();
+            )
+            .build();
     }
 
     @Bean
@@ -89,7 +111,9 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(
+        AuthenticationConfiguration config
+    ) throws Exception {
         return config.getAuthenticationManager();
     }
 
